limit overflow of event descriptions. fixes #35

--- a/resources/sass/calendar/inputs.scss
+++ b/resources/sass/calendar/inputs.scss
@@ -845,6 +845,14 @@ label{
     border-radius:7px;
 }
 
+.event_desc {
+    overflow-x: auto;
+}
+
+.event_desc * {
+    max-width: 100%;
+}
+
 
 .close-ui-btn-bg{
     position:absolute;
